--- a/src/public/components/header.html
+++ b/src/public/components/header.html
@@ -1,7 +1,13 @@
 <header class="header">
-<div class="logoHeader">
-    <a href="">
-        <img src="./img/logo.svg" alt="">
+  <div class="logoHeader">
+    <a href="./index.html" class="logo">
+      <img src="./img/logo.svg" alt="logo" class="logoSvg" />
     </a>
-</div>
+  </div>
+
+  <button type="button" class="burgerMenu">
+    <svg width="44" height="44">
+      <use href="./img/icons.svg#icon-menu"></use>
+    </svg>
+  </button>
 </header>
