--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,19 @@ $secondary-text: #ffffff;
 $tertiary-text: #d27487;
 $info-text: #6d6b67;
 
+//BG
+$primary-bg: #ffffff;
+$secondary-bg: #e9e9e3;
+$tertiary-bg: #aa9e54;
+$header-bg: #ffffff;
+$burger-menu-bg: #aa9e54;
+$hero-bg: #ffffff;
+$menu-bg: #ffffff;
+
+//BTN
+$btn-bg: #6f6f64;
+
 //ICONS
 $bm-btn: #c67a88;
 $social-icon: #4a2b33;
+$close-btn: #4a2b33;
