--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,7 +4,7 @@ html {
 
 body,
 button {
-  // background-color: $primary-bg;
+  background-color: $primary-bg;
   color: $primary-text;
   font-family: 'Roboto Slab', serif;
   // margin: 0 auto;
