add js for burger-menu

--- a/src/public/components/header.html
+++ b/src/public/components/header.html
@@ -5,7 +5,12 @@
     </a>
   </div>
 
-  <button type="button" class="burgerMenu">
+  <button
+    type="button"
+    class="burgerMenu menu-toggle js-open-menu"
+    aria-expanded="false"
+    aria-controls="mobile-menu"
+  >
     <svg width="44" height="44">
       <use href="./img/icons.svg#icon-menu"></use>
     </svg>
