--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,7 +8,7 @@ $info-text: #6d6b67;
 $primary-bg: #ffffff;
 $secondary-bg: #e9e9e3;
 $tertiary-bg: #aa9e54;
-$header-bg: #ffffff;
+$header-bg: #4A2B33;
 $burger-menu-bg: #aa9e54;
 $hero-bg: #ffffff;
 $menu-bg: #ffffff;
