add js for burger-menu

--- a/src/public/components/burger-menu/burger-menu.html
+++ b/src/public/components/burger-menu/burger-menu.html
@@ -4,5 +4,5 @@
       <use href="./images/icons.svg#icon-clos"></use>
     </svg>
   </button>
-  <div>sdflsdfs</div>
+  <div>sdflssdfsdfdfs</div>
 </div>
