--- a/src/public/components/burger-menu/burger-menu.html
+++ b/src/public/components/burger-menu/burger-menu.html
@@ -1,8 +1,132 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
   <button class="menu-toggle js-close-menu">
     <svg width="28" height="28">
-      <use href="./images/icons.svg#icon-clos"></use>
+      <use href="./images/icons.svg#icon-close"></use>
     </svg>
   </button>
-  <div>sdflssdfsdfdfs</div>
+
+  <!-- Mobile menu -->
+  <div class="BM-box">
+    <div class="BM">
+      <ul class="BM-list">
+        <h2 class="price-bm-title">Прайс</h2>
+        <li class="BM-item">
+          <p class="BM-text">Денне перебування без заселення</p>
+          <p class="BM-prise">150 грн</p>
+        </li>
+        <!-- <li class="BM-item">
+            <p class="BM-text">Перебування у буденний день</p>
+            <p class="BM-prise">350 грн</p>
+          </li> -->
+        <!-- <li class="BM-item">
+            <p class="BM-text">Перебування у вихідний день</p>
+            <p class="BM-prise">400 грн</p>
+          </li> -->
+        <li class="BM-item">
+          <p class="BM-text">Перебування з заселенням</p>
+          <p class="BM-prise">400 грн</p>
+        </li>
+        <li class="BM-item BM-item-center">
+          <p class="ps-text">(Ціна вказана за одну особу)</p>
+        </li>
+
+        <ul class="BM-descr">
+          <h3 class="price-bm-subtitle">У вартість входить:</h3>
+          <li class="BM-item-descr">
+            <p class="description-bm-accent">мангал</p>
+          </li>
+          <li class="BM-item-descr">
+            <p class="description-bm-accent">альтанка</p>
+          </li>
+          <li class="BM-item-descr">
+            <p class="description-bm-accent">стоянка</p>
+          </li>
+        </ul>
+      </ul>
+    </div>
+
+    <div class="menuContacts">
+      <ul class="menuContactsList">
+        <li class="menuContactsItem">
+          <a
+            id="tel:+380964875185"
+            href="tel:+380964875185"
+            class="menuContactsLink menuContactsLinkAccent"
+          >
+            +38 096 487 51 85</a
+          >
+        </li>
+        <li class="menuContacts-item">
+          <a
+            id="tel:+380675609482"
+            href="tel:+380675609482"
+            class="menuContactsLink menuContactsLinkAccent"
+          >
+            +38 067 560 94 82</a
+          >
+        </li>
+      </ul>
+
+      <address class="address-bm-box">
+        <div class="map-bm">
+          <a
+            href="https://goo.gl/maps/Yw1rKM6HGrmVK9iBA"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+          >
+            <img src="./images/logos_google-maps.svg" alt="map" />
+            <!-- <svg width="35" height="38" class="icon-map">
+                <use href="./images/icons.svg#icon-map"></use>
+              </svg> -->
+          </a>
+        </div>
+        <div class="address-bm">
+          <a
+            class="address-link-bm"
+            href="https://goo.gl/maps/Yw1rKM6HGrmVK9iBA"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+            >пров. Набережний 5а <br />
+            с. Чкаловка</a
+          >
+        </div>
+      </address>
+    </div>
+
+    <div class="menuSocial">
+      <ul class="menuSocialList">
+        <li class="menuSocialItem">
+          <a
+            href="https://www.instagram.com/baza_otdykha_kr/"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+            class="menuSocialLink"
+            >Instagram
+            <span class="menuSocialBorder"></span>
+          </a>
+        </li>
+        <li class="menuSocialItem">
+          <a
+            href="https://t.me/datcha_bv"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+            class="menuSocialLink"
+            >Telegram
+            <span class="menuSocialBorder"></span>
+          </a>
+        </li>
+
+        <li class="menuSocialItem">
+          <a
+            href="https://www.facebook.com/datcha.afalina"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
+            class="menuSocialLink"
+            >Facebook
+            <span class="menuSocialBorder"></span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
