--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,3 +7,5 @@
 
 //COMPONENTS
 @import './components/header';
+@import './components/burger-menu/burger-menu';
+@import './components/burger-menu/burger-menuStyles';
