--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,11 +3,11 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
-  background-color: $header-bg;
+  background-color: #4A2B33;
 }
 
 .burgerMenu {
-  fill: $bm-btn;
+  fill: #c67a88;
   background-color: transparent;
   border: none;
   padding: 16px 0;
