--- a/src/sass/components/burger-menu/_burger-menu.scss
+++ b/src/sass/components/burger-menu/_burger-menu.scss
@@ -58,7 +58,7 @@
   width: 100vw;
   height: 100vh;
   padding: 15px 10px;
-  background-color: $primary-bg;
+  background-color: #ffffff;
   z-index: 999;
 
   transform: translateX(100%);
