--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,8 +4,8 @@ html {
 
 body,
 button {
-  background-color: $primary-bg;
-  color: $primary-text;
+  background-color: #ffffff;
+  color: #222222;
   font-family: 'Roboto Slab', serif;
   // margin: 0 auto;
   margin: 0;
