--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,11 +1,11 @@
 //UTILS
-@import './utils/variables';
+// @use './utils/variables' as *;
 @import './utils/mixin';
 
 //BASE
-@import './base/base';
+@use './base/base';
 
 //COMPONENTS
-@import './components/header';
-@import './components/burger-menu/burger-menu';
-@import './components/burger-menu/burger-menuStyles';
+@use './components/header';
+@use './components/burger-menu/burger-menu';
+@use './components/burger-menu/burger-menuStyles';
